{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "9d8138a7-88fa-4ee7-917f-ac6e39528c89",
            "actions": [
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "917a9e40-0caa-499f-80b9-a9ef75fa6a18",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "fbb217f0-7362-450a-bc2e-0cbc19c5d899",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "6e5311f1-8897-4b1a-a9a9-48ad226982a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bb170a55-289e-40df-ad34-cc0c8110435f",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87a12ca9-4700-4a48-b232-882d1121407d",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b663b43e-2775-4b9e-894b-b8a8c02e262e",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}